@@ -18,6 +18,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Entity
@@ -122,9 +123,22 @@ public class UserEntity {
                     fe.setFriend(f);
                     fe.setPending(pending);
                     return fe;
-                }).toList();
+                }).collect(Collectors.toList());
 
         this.friends.addAll(friendsEntities);
+    }
+
+    public void addInvites(UserEntity... invites) {
+        List<FriendsEntity> friendsEntities = Stream.of(invites)
+                .map(f -> {
+                    FriendsEntity fe = new FriendsEntity();
+                    fe.setUser(f);
+                    fe.setFriend(this);
+                    fe.setPending(true);
+                    return fe;
+                }).collect(Collectors.toList());
+
+        this.invites.addAll(friendsEntities);
     }
 
     public void removeFriends(UserEntity... friends) {
@@ -137,20 +151,5 @@ public class UserEntity {
         for (UserEntity invite : invitations) {
             getInvites().removeIf(i -> i.getUser().getId().equals(invite.getId()));
         }
-    }
-
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (o == null || getClass() != o.getClass()) return false;
-        UserEntity that = (UserEntity) o;
-        return Objects.equals(id, that.id) && Objects.equals(username, that.username) && currency == that.currency && Objects.equals(firstname, that.firstname) && Objects.equals(surname, that.surname) && Arrays.equals(photo, that.photo) && Objects.equals(friends, that.friends) && Objects.equals(invites, that.invites);
-    }
-
-    @Override
-    public int hashCode() {
-        int result = Objects.hash(id, username, currency, firstname, surname, friends, invites);
-        result = 31 * result + Arrays.hashCode(photo);
-        return result;
     }
 }
